[gd_scene load_steps=17 format=3 uid="uid://b243oicw5y284"]

[ext_resource type="Script" path="res://components/stats_component.gd" id="1_mmb2b"]
[ext_resource type="Script" path="res://Score/score_component.gd" id="1_u0kkh"]
[ext_resource type="Script" path="res://Enemies/enemy.gd" id="1_uqg55"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_tsdlq"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="3_yloh3"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="4_i1dd2"]
[ext_resource type="Script" path="res://components/shake_component.gd" id="5_ubasg"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="7_4kt6k"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="8_lw0hg"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="9_07o8w"]
[ext_resource type="Script" path="res://components/FlashComponent2.gd" id="9_w31nx"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="11_aq6mv"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="13_ehwa7"]
[ext_resource type="Resource" uid="uid://dcrk6bboemgxj" path="res://game_stats.tres" id="14_pak6s"]
[ext_resource type="AudioStream" uid="uid://jt8aukwmy78v" path="res://sounds/hit_sound.wav" id="15_748bp"]
[ext_resource type="Script" path="res://components/variable_pitch_audio_stream_player.gd" id="16_ix8wb"]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_uqg55")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
autoplay = "default"

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("1_mmb2b")
health = 3

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_tsdlq")
actor = NodePath("../AnimatedSprite2D")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("3_yloh3")
sprite = NodePath("../AnimatedSprite2D")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_i1dd2")
sprite = NodePath("../AnimatedSprite2D")

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("5_ubasg")
node = NodePath("../AnimatedSprite2D")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_mask = 0
script = ExtResource("7_4kt6k")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("8_lw0hg")

[node name="FlashComponent2" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("9_w31nx")
sprite = NodePath("../AnimatedSprite2D")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("9_07o8w")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("13_ehwa7")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../SpawnerComponent")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("11_aq6mv")

[node name="ScoreComponent" type="Node" parent="."]
script = ExtResource("1_u0kkh")
game_stats = ExtResource("14_pak6s")

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_748bp")
volume_db = 5.0
script = ExtResource("16_ix8wb")
